// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody Style tests should render with default styles 1`] = `
.circuit-0 {
  vertical-align: middle;
  cursor: pointer;
  position: relative;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-0:focus {
  z-index: 1;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  transform: translate(0, 0);
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

tbody .circuit-0:focus td,
tbody .circuit-0:hover td,
tbody .circuit-0:focus th,
tbody .circuit-0:hover th {
  color: var(--cui-fg-accent-hovered);
  background-color: var(--cui-bg-normal-hovered);
}

tbody .circuit-0:active td,
tbody .circuit-0:active th {
  color: var(--cui-fg-accent-pressed);
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0.isChild th {
  padding-left: 48px;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class=" circuit-0 circuit-1"
    id="table-row-0"
    tabindex="0"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody Style tests should render with fixed header styles 1`] = `
.circuit-0 {
  vertical-align: middle;
  cursor: pointer;
  position: relative;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-0:focus {
  z-index: 1;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  transform: translate(0, 0);
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

tbody .circuit-0:focus td,
tbody .circuit-0:hover td,
tbody .circuit-0:focus th,
tbody .circuit-0:hover th {
  color: var(--cui-fg-accent-hovered);
  background-color: var(--cui-bg-normal-hovered);
}

tbody .circuit-0:active td,
tbody .circuit-0:active th {
  color: var(--cui-fg-accent-pressed);
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0.isChild th {
  padding-left: 48px;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

@media (max-width: 767px) {
  .circuit-2 {
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    width: 145px;
    overflow-wrap: break-word;
    z-index: 1;
  }

  .circuit-2:after {
    content: '';
    background: linear-gradient(
              90deg,
              rgba(0, 0, 0, 0.12),
              rgba(255, 255, 255, 0)
            );
    height: 100%;
    position: absolute;
    top: 0;
    left: 100%;
    width: 6px;
  }
}

.circuit-3 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class=" circuit-0 circuit-1"
    id="table-row-0"
    tabindex="0"
  >
    <th
      class="circuit-2"
      scope="row"
    >
      Foo
    </th>
    <td
      class="circuit-3"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should not render a cell with hovered styles if its column is not currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
  cursor: pointer;
  position: relative;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-0:focus {
  z-index: 1;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  transform: translate(0, 0);
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

tbody .circuit-0:focus td,
tbody .circuit-0:hover td,
tbody .circuit-0:focus th,
tbody .circuit-0:hover th {
  color: var(--cui-fg-accent-hovered);
  background-color: var(--cui-bg-normal-hovered);
}

tbody .circuit-0:active td,
tbody .circuit-0:active th {
  color: var(--cui-fg-accent-pressed);
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0.isChild th {
  padding-left: 48px;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class=" circuit-0 circuit-1"
    id="table-row-0"
    tabindex="0"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-2"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should render a cell with hovered styles if its column is currently hovered 1`] = `
.circuit-0 {
  vertical-align: middle;
  cursor: pointer;
  position: relative;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

.circuit-0:focus {
  z-index: 1;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  transform: translate(0, 0);
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

tbody .circuit-0:focus td,
tbody .circuit-0:hover td,
tbody .circuit-0:focus th,
tbody .circuit-0:hover th {
  color: var(--cui-fg-accent-hovered);
  background-color: var(--cui-bg-normal-hovered);
}

tbody .circuit-0:active td,
tbody .circuit-0:active th {
  color: var(--cui-fg-accent-pressed);
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0.isChild th {
  padding-left: 48px;
}

.circuit-2 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-3 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class=" circuit-0 circuit-1"
    id="table-row-0"
    tabindex="0"
  >
    <td
      class="circuit-2"
    >
      Foo
    </td>
    <td
      class="circuit-3"
    >
      Bar
    </td>
  </tr>
</tbody>
`;
